# phi

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
assets/shaders/: BlurGauss9x9.fs  Debug.fs  Debug.vs  Layout.h  Light.h  LightPass.fs  Lightpass.fs  Material.h  Outline.fs  Passthrough.vs  PhongMaterial.fs  PhongMaterial.vs  Quad.vs  QuadTexture.fs  ShadowPass.fs  ShadowPass.vs  SsaoPass.fs
editor/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  MainWindow.ui  PhiWidget.cpp  PhiWidget.h  RendererProperties.cpp  RendererProperties.h  RendererProperties.ui  RenderingContext.cpp  RenderingContext.h  TransformProperties.cpp  TransformProperties.h  TransformProperties.ui  WorldTree.cpp  WorldTree.h  WorldTree.ui  main.cpp
engine/: CMakeLists.txt
engine/device/: Buffer.cpp  Buffer.h  Device.cpp  Device.h  FrameBuffer.h  Layout.cpp  Layout.h  Program.cpp  Program.h  Prototypes.cpp  Prototypes.h  Resource.h  Sampler.cpp  Shader.cpp  Shader.h  Texture.cpp  Texture.h  Utils.h
engine/math/: AABB.cpp  Math.h  Ray.cpp  Ray.h  Rect2D.h  Transformable.cpp  Transformable.h  Triangle.h
engine/renderer/: BlurPass.cpp  Common.cpp  Common.h  DataBinding.h  DebugDrawer.cpp  DeferredRenderer.cpp  DeferredRenderer.h  DrawCall.cpp  DrawCall.h  DrawCallQueue.cpp  DrawCallQueue.h  LightPass.cpp  LightPass.h  Material.h  OutlinePass.cpp  OutlinePass.h  RenderPass.h  Renderer.h  ShadowPass.cpp  ShadowPass.h  SsaoPass.cpp  SsaoPass.h
engine/renderer/materials/: PhongMaterial.cpp  PhongMaterial.h
engine/scene/: Entity.h  FlatScene.cpp  FlatScene.h  FreeLookCamera.cpp  Light.cpp  Light.h  Mesh.cpp  Mesh.h  OrthoCamera.cpp  OrthoCamera.h  Scene.h
engine/utils/: Logging.h  MeshImporter.cpp  MeshImporter.h  ShaderPreprocessor.cpp  ShaderPreprocessor.h  TextureImporter.cpp  TextureImporter.h  Types.h
src/: CMakeLists.txt  main.cpp
src/device/: Buffer.cpp  Buffer.h  Device.cpp  Device.h  FrameBuffer.cpp  FrameBuffer.h  Layout.cpp  Layout.h  Primitive.h  Program.cpp  Program.h  Prototypes.cpp  Prototypes.h  Resource.h  Sampler.cpp  Sampler.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h
src/io/: File.cpp  File.h
src/math/: AABB.h  Box.cpp  Box.h  Math.h  Math.hpp  Transformable.cpp  Transformable.h
src/renderer/: BlurPass.cpp  BlurPass.h  Buffer.cpp  Buffer.h  Command.cpp  Command.h  CommandQueue.cpp  CommandQueue.h  Common.cpp  DataBinding.h  DebugDrawer.cpp  DebugDrawer.h  DeferredRenderer.cpp  DeferredRenderer.h  DrawCall.cpp  DrawCall.h  DrawCallQueue.cpp  DrawCallQueue.h  ForwardRenderer.cpp  ForwardRenderer.h  FrameBuffer.cpp  FrameBuffer.h  Layout.h  LightPass.cpp  LightPass.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  ProgramCache.h  Prototypes.cpp  Prototypes.h  RenderCommand.cpp  RenderCommand.h  RenderCommandQueue.cpp  RenderCommandQueue.h  Renderer.h  Resource.h  Shader.cpp  Shader.h  (+12 more)
src/renderer/materials/: BasicMaterial.cpp  BasicMaterial.h  DebugMaterial.cpp  DebugMaterial.h  PhongMaterial.cpp  PhongMaterial.h
src/scene/: Camera.cpp  Camera.h  DummyCamera.h  Entity.h  FlatScene.cpp  FlatScene.h  FreeLookCamera.cpp  FreeLookCamera.h  Light.cpp  Light.h  ListScene.cpp  ListScene.h  Mesh.cpp  Mesh.h  OrthoCamera.cpp  OrthoCamera.h  Scene.h
src/scene/impl/: FreeLookCamera.cpp
src/utils/: Logging.h  MeshImporter.cpp  ProgramCache.cpp  ProgramCache.h  Timer.h
